overflow fix

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,7 +4,6 @@
     display: flex;
     justify-content: center;
     height: 100%;
-    overflow: hidden;
     .middleFlex {
         display: flex;
         height: 100%;
@@ -13,8 +12,7 @@
         align-items: center;
         position: relative;
         padding-top: 66px;
-        overflow-y: auto;
-        overflow-x: hidden;
+
         h1 {
             font-size: $size2;
             margin-bottom: 44px;
